# autograde-rs

./: .gitignore  Cargo.toml  TODO  autograde.toml  flake.nix  justfile
src/: build.rs  config.rs  lib.rs  main.rs  unit.rs
tests/autograde/: autograde.toml
